--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@ and is wrapped around the whole page content, except for the footer in this exam
 
 <!-- Header -->
 <header class="w3-container w3-center w3-padding-32"> 
-  <h1><b>MY BLOG</b></h1>
-  <p>Welcome <span class="w3-tag">unknown</span></p>
+  <h1><b>Blog Tomka Byliny</b></h1>
+  <p>Witaj <span class="w3-tag">nieznajomy</span></p>
 </header>
 
 <!-- Grid -->
@@ -34,7 +34,7 @@ and is wrapped around the whole page content, except for the footer in this exam
     </div>
 
     <div class="w3-container">
-      <p>Cześć, to jest testowy opis bloga o najmniej ciekawych informacjach z Azji</p>
+      <p>Cześć, to jest mój nowy blog o najmniej ciekawych informacjach z Azji</p>
       <div class="w3-row">
         <div class="w3-col m8 s12">
           <p><button class="w3-button w3-padding-large w3-white w3-border"><b>CZYTAJ WIĘCEJ »</b></button></p>
